--- a/app/src/main/res/layout/activity_confirm_signup.xml
+++ b/app/src/main/res/layout/activity_confirm_signup.xml
@@ -1,28 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.nothapp.appfuniture.activity.SignupActivity">
+    tools:context="com.nothapp.appfuniture.activity.SignupActivity"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
         <ImageView
+            android:id="@+id/imgBack"
             android:layout_width="45dp"
             android:layout_height="35dp"
             android:src="@drawable/ic_baseline_arrow_back_24"
-            android:id="@+id/imgBack"
             android:layout_marginTop="10dp"/>
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="20dp"
             android:layout_height="wrap_content">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Đăng ký"
-                android:textSize="25dp"
+                android:textSize="25sp"
                 android:textColor="@color/black"
                 android:textStyle="bold"/>
             <ImageView
@@ -40,28 +43,28 @@
             android:layout_gravity="center"/>
 
         <EditText
+            android:id="@+id/edtPhone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:inputType="number"
             android:hint="Nhập OTP"
             android:background="@drawable/custom_editext"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textColor="@color/black"
-            android:id="@+id/edtPhone"
             android:padding="15dp"/>
         <Button
+            android:id="@+id/btnXacNhan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Xác nhận"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textAllCaps="false"
             android:background="@drawable/custom_btn"
             android:textColor="@color/white"
             android:padding="8dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:layout_marginTop="20dp"
-            android:id="@+id/btnXacNhan"/>
+            android:layout_marginTop="20dp" />
     </LinearLayout>
-</layout>
+</LinearLayout>
