--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -1,25 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.nothapp.appfuniture.activity.SigninActivity">
+    tools:context="com.nothapp.appfuniture.activity.SigninActivity"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
                 android:layout_height="wrap_content">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Đăng nhập"
-                    android:textSize="25dp"
+                    android:textSize="25sp"
                     android:textColor="@color/black"
                     android:textStyle="bold"/>
 
@@ -44,7 +47,7 @@
                 android:inputType="number"
                 android:hint="Nhập số điện thoại"
                 android:background="@drawable/custom_editext"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 android:textColor="@color/black"
                 android:id="@+id/edtPhone"
                 android:padding="15dp"/>
@@ -57,22 +60,22 @@
                 android:textColor="@color/black"
                 android:id="@+id/edtPassword"
                 android:background="@drawable/custom_editext"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 android:padding="15dp"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Quên mật khẩu ?"
-                android:textSize="18dp"
+                android:textSize="18sp"
                 android:textColor="@color/black"
                 android:gravity="end"
                 android:layout_marginBottom="10dp"
-                android:layout_marginRight="20dp"/>
+                android:layout_marginEnd="20dp"/>
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Đăng nhập"
-                android:textSize="25dp"
+                android:textSize="25sp"
                 android:textAllCaps="false"
                 android:background="@drawable/custom_btn"
                 android:textColor="@color/white"
@@ -87,7 +90,7 @@
                 <RelativeLayout
                     android:layout_width="wrap_content"
                     android:layout_height="1dp"
-                    android:layout_marginLeft="20dp"
+                    android:layout_marginStart="20dp"
                     android:layout_gravity="center_vertical"
                     android:background="#858484"
                     android:layout_weight="1"/>
@@ -95,13 +98,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Hoặc"
-                    android:textSize="17dp"
+                    android:textSize="17sp"
                     android:gravity="center_horizontal"
                     android:layout_weight="1"/>
                 <RelativeLayout
                     android:layout_width="wrap_content"
                     android:layout_height="1dp"
-                    android:layout_marginRight="20dp"
+                    android:layout_marginEnd="20dp"
                     android:layout_gravity="center_vertical"
                     android:background="#858484"
                     android:layout_weight="1"/>
@@ -155,7 +158,7 @@
                 android:layout_height="wrap_content"
                 android:text="Đăng ký tài khoản ?"
                 android:gravity="center_horizontal"
-                android:textSize="17dp"
+                android:textSize="17sp"
                 android:id="@+id/txtDangKy"
                 android:textColor="@color/black"
                 android:layout_marginTop="20dp"
@@ -163,5 +166,4 @@
                 android:textStyle="bold"/>
         </LinearLayout>
     </ScrollView>
-
-</layout>
+</LinearLayout>
