--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.nothapp.appfuniture.activity.SignupActivity">
+    tools:context="com.nothapp.appfuniture.activity.SignupActivity"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -15,14 +18,14 @@
             android:layout_marginTop="10dp"/>
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="20dp"
             android:layout_height="wrap_content">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Đăng ký"
-                android:textSize="25dp"
+                android:textSize="25sp"
                 android:textColor="@color/black"
                 android:textStyle="bold"/>
             <ImageView
@@ -30,7 +33,7 @@
                 android:layout_height="30dp"
                 android:layout_centerHorizontal="true"
                 android:layout_gravity="center_horizontal"
-                android:src="@drawable/user" />
+                android:src="@drawable/user"/>
         </RelativeLayout>
         <ImageView
             android:layout_width="200dp"
@@ -46,7 +49,7 @@
             android:inputType="number"
             android:hint="Nhập số điện thoại"
             android:background="@drawable/custom_editext"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textColor="@color/black"
             android:id="@+id/edtPhone"
             android:padding="15dp"/>
@@ -54,7 +57,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Gửi OTP"
-            android:textSize="25dp"
+            android:textSize="25sp"
             android:textAllCaps="false"
             android:background="@drawable/custom_btn"
             android:textColor="@color/white"
@@ -64,4 +67,4 @@
             android:layout_marginTop="20dp"
             android:id="@+id/btnGuiOTP"/>
     </LinearLayout>
-</layout>
+</LinearLayout>
