--- a/app/src/main/res/layout/item_giam_gia.xml
+++ b/app/src/main/res/layout/item_giam_gia.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
     <androidx.cardview.widget.CardView
         android:layout_width="200dp"
         android:layout_height="wrap_content"
@@ -18,7 +21,6 @@
                 android:layout_height="50dp"
                 android:layout_margin="10dp"
                 android:background="@drawable/bg_indicator">
-
                 <TextView
                     android:id="@+id/txtGiamGia"
                     android:layout_width="wrap_content"
@@ -26,7 +28,7 @@
                     android:layout_centerInParent="true"
                     android:text="-30%"
                     android:textColor="@color/white"
-                    android:textSize="18dp"
+                    android:textSize="18sp"
                     android:textStyle="bold" />
             </RelativeLayout>
 
@@ -45,12 +47,12 @@
                 android:layout_marginTop="15dp"
                 android:background="@drawable/striking_text"
                 android:text="5.852.200 vnd"
-                android:textSize="18dp" />
+                android:textSize="18sp" />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="5.852.200 vnd"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 android:textColor="#5051A2"
                 android:gravity="center_horizontal"
@@ -74,9 +76,9 @@
                     android:text="Đã bán 25"
                     android:id="@+id/txtDaBan"
                     android:textColor="@color/white"
-                    android:textSize="16dp"
+                    android:textSize="16sp"
                     android:textStyle="bold" />
             </RelativeLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-</layout>
+</LinearLayout>
