--- a/app/src/main/res/layout/item_gio_hang.xml
+++ b/app/src/main/res/layout/item_gio_hang.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -31,7 +34,7 @@
                 android:text="Name ghế"
                 android:layout_marginTop="10dp"
                 android:textColor="@color/black"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
             <LinearLayout
                 android:layout_width="match_parent"
@@ -51,9 +54,9 @@
                     android:layout_gravity="center_vertical"
                     android:text="5.852.200 vnd"
                     android:textColor="#5051A2"
-                    android:textSize="20dp"
+                    android:textSize="20sp"
                     android:textStyle="bold"
-                    android:layout_marginLeft="5dp"/>
+                    android:layout_marginStart="5dp"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -68,14 +71,14 @@
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="5dp"
+                        android:layout_marginStart="5dp"
                         android:src="@drawable/ic_baseline_horizontal_rule_24"
                         android:id="@+id/btnTru"/>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="1"
-                        android:textSize="25dp"
+                        android:textSize="25sp"
                         android:layout_marginLeft="7dp"
                         android:layout_marginRight="7dp"
                         android:textColor="@color/black"
@@ -96,11 +99,11 @@
                         android:layout_width="35dp"
                         android:layout_height="35dp"
                         android:id="@+id/imgDelete"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="10dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginEnd="10dp"
                         android:src="@drawable/delete" />
                 </RelativeLayout>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
-</layout>
+</LinearLayout>
