--- a/app/src/main/res/layout/item_pho_bien.xml
+++ b/app/src/main/res/layout/item_pho_bien.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical" >
     <androidx.cardview.widget.CardView
         android:layout_width="180dp"
         android:layout_height="wrap_content"
@@ -25,18 +28,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Ghế SKRUVSTA"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 android:id="@+id/namePopular"
                 android:textColor="@color/black"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"/>
 
             <RatingBar
                 style="?android:attr/ratingBarStyleIndicator"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:rating="3.5"
                 android:scaleX=".6"
                 android:scaleY=".6"
@@ -46,7 +49,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
                 android:orientation="horizontal">
                 <ImageView
                     android:layout_width="25dp"
@@ -61,10 +64,10 @@
                     android:layout_gravity="center_vertical"
                     android:text="5.852.200 vnd"
                     android:textColor="#5051A2"
-                    android:textSize="20dp"
+                    android:textSize="20sp"
                     android:textStyle="bold"
-                    android:layout_marginLeft="5dp"/>
+                    android:layout_marginStart="5dp"/>
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-</layout>
+</LinearLayout>
